// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceholderConnect PlaceholderConnect is loading 1`] = `
<DocumentFragment>
  <div
    class="sc-fFGjHI eWYtNO"
  >
    loading
    <div
      class="sc-iVCKna dyLvdT"
    >
      <div>
        <div
          data-src="no-data.svg"
          src=""
        />
      </div>
    </div>
    <p
      class="sc-ewnqHT coSJgb sc-dicizt jMoYNm"
    >
      No 
    </p>
    <button
      class="sc-bgqQcB hCCYhJ"
      label="Connect Wallet"
      type="button"
    >
       Connect Wallet
    </button>
  </div>
</DocumentFragment>
`;

exports[`PlaceholderConnect PlaceholderConnect is not loading 1`] = `
<DocumentFragment>
  <div
    class="sc-fFGjHI eWYtNO"
  >
    <div
      class="sc-iVCKna dyLvdT"
    >
      <div>
        <div
          data-src="no-data.svg"
          src=""
        />
      </div>
    </div>
    <p
      class="sc-ewnqHT coSJgb sc-dicizt jMoYNm"
    >
      No 
    </p>
    <button
      class="sc-bgqQcB hCCYhJ"
      label="Connect Wallet"
      type="button"
    >
       Connect Wallet
    </button>
  </div>
</DocumentFragment>
`;
